# vicon

./: .gitignore  CMakeLists.txt  README.md  config.cfg  main.cpp  pyproject.toml  setup.py  test_vicon.py
bindings/: vicon_bindings.cpp
include/: vicon.hpp
include/fdcl/: vicon.hpp
libraries/vrpn/client_src/: .cvsignore  logfilesenders  logfiletypes
libraries/vrpn/client_src/pc_linux64/: add_vrpn_cookie  bdbox_client  c_interface_example  checklogfile  ff_client  forcedevice_test_client  forwarderClient  phan_client  printcereal  printvals  sphere_client  test_imager  test_mutex  text  vrpn_ping  vrpn_print_devices  vrpn_print_performance
libraries/vrpn/pc_linux64/: .depend
libraries/vrpn/quat/: .cvsignore
libraries/vrpn/server_src/: .cvsignore
libraries/vrpn/server_src/pc_linux64/: client_and_server  test_analogfly  test_auxiliary_logger  test_logging  test_mutex  test_peerMutex  test_radamec_spi  test_vrpn  testimager_server  vrpn_server  wiimote_head_tracker
src/: fdcl_matrix_utils.cpp  fdcl_vicon.cpp  main.cpp  vicon.cpp
